# py-load

./: .gitignore  .markdownlint.json  README.md  USAGE.md  py_load.py  requirements.txt  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: python-3-x-testing.md
scripts/: upload.bat  upload.sh
test/: general.py  iter.py  test_general.py  test_iter.py  test_manual.py
tests/: py_load.py  test_general.py  test_iter.py  test_manual.py
