[metadata]
name = py-load-lib
url = https://github.com/talwat/py-load
version = 0.5
project_urls =
    Wiki = https://github.com/talwat/py-load/wiki
author = Talwat
author_email = talwat321@gmail.com
description-file = README.md
license_files = LICENSE
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
description = A super simple, compact, and easy to use loading bar module for python with no dependencies.
keywords = loading, bar, loadingbar, loading bar, progressbar, progressmeter, progress, bar, meter, rate, eta, console, terminal, time
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
py_modules = py_load